k8s/00-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lms
