k8s/assignment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-assignment-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-assignment-service
  template:
    metadata:
      labels:
        app: lms-assignment-service
    spec:
      containers:
      - name: lms-assignment-service
        image: lms-assignment-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8087
        resources:
          limits:
            cpu: "1000m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8087
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8087
          initialDelaySeconds: 180
---
apiVersion: v1
kind: Service
metadata:
  name: lms-assignment-service
  namespace: lms
spec:
  ports:
  - port: 8087
    targetPort: 8087
  selector:
    app: lms-assignment-service
