k8s/course-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-course-service
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-course-service
  template:
    metadata:
      labels:
        app: lms-course-service
    spec:
      containers:
      - name: lms-course-service
        image: lms-course-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        resources:
          limits:
            cpu: "600m"
            memory: "256Mi"
          requests:
            cpu: "300m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8083
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8083
          initialDelaySeconds: 180
---
apiVersion: v1
kind: Service
metadata:
  name: lms-course-service
  namespace: lms
spec:
  ports:
  - port: 8083
    targetPort: 8083
  selector:
    app: lms-course-service
