k8s/infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-postgres
  namespace: lms
spec:
  ports:
    - port: 5432
  selector:
    app: lms-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lms-postgres
  namespace: lms
spec:
  serviceName: "lms-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: lms-postgres
  template:
    metadata:
      labels:
        app: lms-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "1000m"
            memory: "256Mi"
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: lms-redis
  namespace: lms
spec:
  ports:
    - port: 6379
  selector:
    app: lms-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-redis
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-redis
  template:
    metadata:
      labels:
        app: lms-redis
    spec:
      containers:
      - name: redis
        image: redis:8-alpine
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: lms-kafka
  namespace: lms
spec:
  ports:
    - name: client
      port: 9092
      targetPort: 9092
  selector:
    app: lms-kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-kafka
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-kafka
  template:
    metadata:
      labels:
        app: lms-kafka
    spec:
      containers:
      - name: kafka
        image: apache/kafka-native:latest
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "1000m"
            memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: lms-elasticsearch
  namespace: lms
spec:
  ports:
    - port: 9200
  selector:
    app: lms-elasticsearch
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-elasticsearch
  namespace: lms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-elasticsearch
  template:
    metadata:
      labels:
        app: lms-elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
        ports:
        - containerPort: 9200
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "1000m"
            memory: "384Mi"
